# industrial-plugin-platform

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yaml  docker-compose.yaml.single  package.json  pyproject.toml  requirements.txt
apps/api/platform_api/: main.py  middleware.py  security.py  ui.py
apps/api/platform_api/api/: auth.py  common.py  data_sources.py  (+14 more)
apps/api/tests/: test_api_routes.py  test_execution.py  test_execution_batch_fanout.py  test_instance_name_conflict.py  test_instance_validation.py  test_manifest.py  test_metadata_store.py  test_package_storage.py  test_scheduler.py  test_security_store.py
apps/runner/platform_runner/: __init__.py  executor.py  function_host.py
apps/runner/tests/: test_function_host_package_imports.py  test_local_python_runner.py
apps/worker/: README.md
config/: license_public_keys.json.example  license_revocations.json.example  platform.dev.yaml  platform.yaml  plugin_trusted_keys.example.json
crates/: Cargo.toml  README.md
crates/ipp_runner_core/: Cargo.toml
crates/ipp_runner_core/src/: main.rs
crates/ipp_scheduler_core/: Cargo.toml
crates/ipp_scheduler_core/src/: main.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  DATAFLOW_SPEC.md  PLUGIN_SPEC.md  README.md  RUNNER_PROTOCOL.md  license_issuer_handbook.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  App.vue.js  main.js  main.ts  styles.css
frontend/src/api/: auth.ts  client.ts  license.ts  modelUpdates.ts  models.ts  observability.ts  packages.js  packages.ts  runtimeDiagnostics.ts  systemSettings.ts  templates.ts
frontend/src/router/: index.js  index.ts
frontend/src/stores/: auth.ts
frontend/src/views/: AdminUsers.vue  DataSources.vue  DataSources.vue.js  HomeCenter.vue  InstanceModelBinding.vue  Instances.vue  Instances.vue.js  LicenseCenter.vue  Login.vue  ModelRegistry.vue  ModelUpdateJobs.vue  PluginList.vue  PluginList.vue.js  PluginUpload.vue  PluginUpload.vue.js  RunList.vue  RunList.vue.js  RuntimeDiagnostics.vue  SystemObservability.vue  SystemSettings.vue  TemplateCenter.vue  UserProfile.vue
plugin_sdk/binary/: README.md
plugin_sdk/examples/: redis_two_input_one_output_plugin_配置说明.md
plugin_sdk/examples/demo_python_plugin/: manifest.yaml
plugin_sdk/examples/no_input_output_plugin/: manifest.yaml
plugin_sdk/examples/tdengine-two-point-test/: README.md  manifest.yaml
plugin_sdk/python/: README.md
scripts/: build-frontend.mjs  build-rust-binaries.sh  dev-api.ps1  dev-api.sh  license_decode.py  license_issue.py  license_keygen.py  license_payload_template.json  run-tests.ps1
(+46 files in other folders)
