[project]
name = "industrial-plugin-platform"
version = "0.1.0"
description = "Industrial algorithm plugin platform foundation."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1",
  "uvicorn[standard]>=0.35,<1",
  "pydantic>=2.11,<3",
  "sqlalchemy>=2.0,<3",
  "pyyaml>=6.0,<7",
  "cryptography>=43,<46",
  "redis>=5.0,<7",
  "pymysql>=1.1,<2",
  "pandas>=2.2,<3",
  "taospy>=2.8,<3",
  "numpy>=2.0,<3",
  "scikit-learn>=1.5,<2",
  "joblib>=1.4,<2",
  "torch==2.6.0",
  "onnx>=1.17,<2",
  "onnxruntime>=1.20,<2",
  "skl2onnx>=1.17,<2",
  "python-multipart>=0.0.20,<1",
  "httpx>=0.27,<1",
]

[tool.pytest.ini_options]
pythonpath = [
  "apps/api",
  "apps/runner",
]
