[package]
name = "ipp_runner_core"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
wait-timeout = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"
