[package]
name = "ipp_scheduler_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "time", "sync"] }
uuid = { version = "1.10", features = ["v4"] }
